assets/stylesheets/components/_cards.scss
.card {
  margin-bottom: 1rem;
  // DEPRECATION NOTICE: .card-caption is now .card-img-caption and .img-caption
  &.current-series .card-caption {
    @media screen and (min-width: $screen-sm) {
      @include make-sm-column(8);
      @include make-sm-column-offset(2);
    }
  }
  > a {
    display: block;
  }

  // Sets fixed height on images when applied
  .card-img-constrained {
    height: 200px;
    object-fit: cover;
    object-position: center;
    width: 100%;
  }
}

.cards-4x .card {
  @media screen and (max-width: $screen-sm - 1) {
    @include make-sm-column(12);
  }
  @media screen and (min-width: $screen-sm) and (max-width: $screen-md - 1) {
    @include make-sm-column(6);
    &:nth-child(odd) {
      clear: left;
    }
  }
  @media screen and (min-width: $screen-md) {
    @include make-sm-column(3);
    &:nth-child(4n + 1) {
      clear: left;
    }
  }
}

.cards-3x .card {
  @media screen and (max-width: $screen-sm - 1) {
    @include make-sm-column(12);
  }
  @media screen and (min-width: $screen-sm) and (max-width: $screen-md - 1) {
    @include make-sm-column(6);
    &:nth-child(odd) {
      clear: left;
    }
  }
  @media screen and (min-width: $screen-md) {
    @include make-sm-column(4);
    &:nth-child(3n + 1) {
      clear: left;
    }
  }
}

.cards-2x .card {
  @media screen and (max-width: $screen-sm - 1) {
    @include make-sm-column(12);
  }
  @media screen and (min-width: $screen-sm) {
    @include make-sm-column(6);
    &:nth-child(odd) {
      clear: left;
    }
  }
}

.cards-2x-xs .card {
  @media (max-width: $screen-sm) {
    @include make-xs-column(6);
    &:nth-child(odd) {
      clear: left;
    }
  }
}

.cards-4x,
.cards-3x,
.cards-2x {
  .feature-cards:not([data-carousel]) {
    @include make-row();
  }
}

.card-block {
  font-family: $base-font-face;
  padding: 1rem;
}

.card-title {
  color: $cr-gray-dark;
  line-height: 1;
  font-weight: 600;
}

.card-title--overlap {
  background-color: $cr-white;
  display: inline-block;
  font-family: $condensed-extra-font-face;
  font-size: 2.125rem;
  margin: -2rem -0.5rem 0;
  padding: 0.25rem 0.5rem;
  position: relative;

  .dark-theme & {
    background-color: $cr-black;
  }
}

.card-title--overlap:after {
  color: $cr-gray-light;
  content: '\2014';
  display: block;
  font-family: $base-font-face;
  font-size: 1.25rem;
  font-weight: 100;
  line-height: 1.5;
}

.card-link:not(:last-of-type) {
  margin-right: 0.5rem;
}

// DEPRECATION NOTICE: .card-caption is now .card-img-caption and .img-caption
.card-caption:before {
  background-color: $cr-blue-lighter;
  color: $cr-gray-dark;
  content: 'Current Series';
  font-family: $accent-font-face;
  font-size: 0.8125rem;
  font-style: italic;
  padding: 0.5rem 0.75rem;
  position: relative;
  top: -30px;
}

.card-img-caption {
  position: relative;

  .img-caption {
    background-color: $cr-blue-lighter;
    bottom: -1rem;
    color: $cr-gray-dark;
    font-family: $accent-font-face;
    font-size: 0.8125rem;
    font-style: italic;
    left: 50%;
    padding: 0.5rem 0.75rem;
    position: absolute;
    transform: translate(-50%, 0);

    &.img-caption--left {
      left: 1rem;
      transform: none;
    }

    &.img-caption--right {
      left: auto;
      right: 1rem;
      transform: none;
    }
  }
}

.card-subtitle {
  color: $cr-gray-light;
  font-size: $font-size-smaller;
  font-weight: 600;
  text-transform: uppercase;
}

.card-deck {
  .card {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-flex: 1;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .card-text {
    font-size: 0.9375rem;
    position: relative;

    address {
      font-size: $font-size-small;
      background: transparent;
      padding: 0;
    }
  }
}

.card-deck--expanded-layout {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;

  @media (min-width: $screen-sm) {
    -webkit-flex-flow: row wrap;
    -ms-flex-flow: row wrap;
    flex-flow: row wrap;
  }

  .card {
    cursor: auto;
    -webkit-flex: 1 0 270px;
    -ms-flex: 1 0 270px;
    flex: 1 0 270px;
    margin-bottom: 1rem;
    padding: 0 0.5rem;
    position: relative;

    @media (min-width: $screen-sm) {
      max-width: 25%;
    }
  }
}

.carousel-cell {
  width: 270px;
  margin-right: 1rem;

  @media (min-width: $screen-md) {
    width: calc(25% - 0.75rem);
  }

  img {
    pointer-events: none;
  }
}

.card-stamp {
  position: absolute;
  right: 0;
  bottom: 0;
  padding: 6px 8px;
  display: flex;

  .icon {
    width: 12px;
    height: 16px;
  }
}

/* Overlay cards */
.card-stamp {
  position: absolute;
  right: 0;
  bottom: 0;
  padding: 6px 8px;

  .icon {
    width: 12px;
    height: 16px;
  }
}

.overlay-card {
  display: block;
  position: relative;
  margin-bottom: 2rem;

  &:hover {
    text-decoration: none;
  }

  .bg-overlay {
    z-index: 1;
  }

  .overlay-card-image {
    height: auto;

    img {
      width: 100%;
    }
  }

  .overlay-card-link:hover {
    color: initial;
    text-decoration: none;
  }

  .overlay-card-content {
    background: transparent;
    bottom: 0;
    left: 0;
    padding: 15px 15px 20px;
    position: absolute;
    right: 0;
    z-index: 2;
  }

  .overlay-card-category {
    color: rgba($cr-white, 0.8);
    font-size: $font-size-smaller;
    line-height: 1.6;
    margin-bottom: 4px;
    text-transform: uppercase;
  }

  .overlay-card-title {
    color: $cr-white;
    font-family: $condensed-extra-font-face;
    font-size: 8vw;
    line-height: 0.9;
    margin-top: 0;
    text-transform: uppercase;
  }

  .overlay-card-author {
    color: $cr-gray-light;
    font-size: $font-size-small;
    margin-bottom: 0;
  }

  @media screen and (min-width: $screen-sm) {
    .overlay-card-title {
      font-size: 4vw;
    }

    .overlay-card-image {
      &::after {
        height: 145px;
        margin-top: -145px;
      }
    }
  }

  @media screen and (min-width: $screen-md) {
    .overlay-card-content {
      padding: 30px;
    }

    .overlay-card-image {
      &::after {
        height: 200px;
        margin-top: -200px;
      }
    }
  }

  @media screen and (min-width: $screen-lg) {
    .overlay-card-title {
      font-size: 4.5rem;
      line-height: 0.8;
    }

    .overlay-card-image {
      &::after {
        height: 250px;
        margin-top: -250px;
      }
    }
  }
}

.overlay-card-xl {
  max-height: calc(100vh - 72px);
  overflow: hidden;

  .overlay-card-image img {
    object-fit: cover;
    object-position: center;
  }

  .overlay-card-content {
    @media (min-width: $screen-sm) {
      padding: 3.75rem;
    }
    .overlay-card-title {
      font-size: 4rem;
      margin-left: -0.2rem;

      @media (min-width: $screen-sm) {
        font-size: 6.875rem;
        padding-bottom: $line-height-computed/2;
      }
    }
  }
}

.overlay-feature-card-link {
  //For imgix background placeholder positioning
  display: block;
  position: relative;

  &:hover {
    text-decoration: none;
    color: inherit;
  }
}

.overlay-feature-card {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: block;
  box-sizing: border-box;
  padding: 400px 15px 30px;

  @media (min-width: $screen-md) {
    padding: 400px 0 45px;
  }

  .overlay-feature-card-content {
    position: relative;

    .overlay-feature-card-category {
      color: rgba($cr-white, 0.8);
      font-size: $font-size-small;
      line-height: 1.2;
      margin-bottom: 0.5rem;
      text-transform: uppercase;
    }

    .overlay-feature-card-title {
      color: $cr-white;
      font-family: $condensed-extra-font-face;
      font-size: 4rem;
      line-height: 0.9;
      margin-top: 0;
      text-transform: uppercase;

      @media (min-width: $screen-sm) {
        font-size: 6.875rem; //110px
      }
    }

    .overlay-feature-card-author {
      color: $cr-gray-light;
      font-size: 13px;
      margin-bottom: 0;
    }
  }
}

.card-video-player {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  // hide UI on cards
  .bmpui-container-wrapper {
    visibility: hidden;
    // except for subtitles
    .bmpui-ui-subtitle-overlay .bmpui-container-wrapper {
      visibility: visible;
    }
  }
}

// allows for smooth fade in
.overlay-card-image,
.overlay-card-content,
.card-video-player {
  transition: opacity 0.45s ease;
}

